update changes for new repo link

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Class-Accessor-Class
 
 {{$NEXT}}
+          fix repository link, too
 
 0.502     2013-07-01 19:33:05 America/New_York
           repackage, update bugtracker
